--- a/client/src/pages/SignupPage/SignupPage.scss
+++ b/client/src/pages/SignupPage/SignupPage.scss
@@ -1,9 +1,8 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 
-.login {
+.signup {
   background-color: $primary-light-color;
-  height: calc(100vh - 8rem);
 
   &__page-header {
     @include t-page-header($primary-dark-color);
@@ -13,10 +12,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1rem;
     width: 24rem;
     margin: 0 auto;
-    padding: 4rem;
+    padding: 2rem;
   }
 
   &__image {
