--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
 .header {
   height: 5rem;
   border-bottom: 0.075rem solid $secondary-light-color;
+  box-shadow: 0 0.125rem 0.313rem rgba($primary-dark-color, 10%);
   padding: 0 2rem;
 
   &__box {
@@ -12,4 +13,35 @@
     justify-content: space-between;
     height: 100%;
   }
+
+  &__subheader {
+    @include t-subheader($primary-dark-color);
+    margin: 0;
+  }
+
+  &__body-large {
+    @include t-body-large($primary-dark-color);
+  }
+
+  &__profile-link {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+  }
+
+  &__avatar {
+    width: 1.5rem;
+    border-radius: 50%;
+  }
+
+  &__sign-buttons-box {
+    display: flex;
+  }
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  gap: 1rem;
 }
