add partial search option

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -14,9 +14,8 @@
     height: 100%;
   }
 
-  &__subheader {
-    @include t-subheader($primary-dark-color);
-    margin: 0;
+  &__logo {
+    height: 5rem;
   }
 
   &__body-large {
@@ -36,6 +35,7 @@
 
   &__sign-buttons-box {
     display: flex;
+    gap: 1rem;
   }
 }
 
