--- a/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
+++ b/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
@@ -1,4 +1,20 @@
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
+
 .property-list {
+  &__searchbar {
+    box-sizing: border-box;
+    width: 100%;
+    height: 2.5rem;
+    border: 0.063rem solid $secondary-light-color;
+    border-radius: 1.25rem;
+    padding: 0 1rem 0 3rem;
+    background-image: url("../../assets/icons/search.png");
+    background-repeat: no-repeat;
+    background-size: 1.5rem;
+    background-position: 1rem;
+  }
+
   &__filters {
     display: flex;
     align-items: center;
@@ -11,7 +27,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    width: 50rem;
+    width: 40rem;
     margin: 2rem auto;
   }
 }
