--- a/client/src/components/PropertyCard/PropertyCard.scss
+++ b/client/src/components/PropertyCard/PropertyCard.scss
@@ -4,7 +4,8 @@
 .property-card {
   width: 100%;
   height: 100%;
-  border: 0.075rem solid $secondary-dark-color;
+  border: 0.075rem solid $background-light-color;
+  box-shadow: 0 0.125rem 0.313rem rgba($primary-dark-color, 0.2);
   border-radius: 0.4rem;
   overflow: hidden;
 
@@ -33,7 +34,7 @@
   }
 
   &__info-box {
-    width: 50%;
+    width: 90%;
     justify-content: space-between;
   }
 }
