add border-radius to map

--- a/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
+++ b/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
@@ -50,5 +50,7 @@
     background-color: $background-light-color;
     background-image: url("../../assets/images/placeholder-map.png");
     background-size: cover;
+    background-position: center;
+    border-radius: 0.4rem;
   }
 }
