--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -23,6 +23,10 @@
     @include tablet {
       @include t-button($primary-light-color);
     }
+
+    &:hover {
+      background-color: rgba($primary-key-color, 0.7);
+    }
   }
 
   &--low-emphasis {
@@ -33,6 +37,10 @@
     @include tablet {
       @include t-button($secondary-dark-color);
     }
+
+    &:hover {
+      background-color: $background-light-color;
+    }
   }
 
   &--link-emphasis {
@@ -42,6 +50,10 @@
 
     @include tablet {
       @include t-button($primary-dark-color);
+    }
+
+    &:hover {
+      background-color: $background-light-color;
     }
   }
 
@@ -60,10 +72,6 @@
     @include tablet {
       width: auto;
     }
-  }
-
-  &:hover {
-    background-color: $background-light-color;
   }
 
   &__icon {
