change key color:

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 // Primary colors
 $primary-dark-color: #13182c;
-$primary-key-color: #2e66e5;
+$primary-key-color: #6002ee;
 $primary-light-color: #ffffff;
 
 // Secondary colors
