--- a/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
+++ b/client/src/pages/PropertiesListingPage/PropertiesListingPage.scss
@@ -45,12 +45,9 @@
   }
 
   &__map {
+    overflow: hidden;
     width: 40rem;
     height: calc(100vh - 11.5rem);
-    background-color: $background-light-color;
-    background-image: url("../../assets/images/placeholder-map.png");
-    background-size: cover;
-    background-position: center;
     border-radius: 0.4rem;
   }
 }
