--- a/client/src/components/PropertyCard/PropertyCard.scss
+++ b/client/src/components/PropertyCard/PropertyCard.scss
@@ -3,7 +3,7 @@
 
 .property-card {
   width: 100%;
-  height: 100%;
+  height: 30rem;
   border: 0.075rem solid $background-light-color;
   box-shadow: 0 0.125rem 0.313rem rgba($primary-dark-color, 0.2);
   border-radius: 0.4rem;
@@ -22,6 +22,10 @@
 
   &__subheader {
     @include t-subheader($primary-dark-color);
+  }
+
+  &__body-small {
+    @include t-body-small($secondary-dark-color);
   }
 
   &__body-large {
