--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -8,6 +8,7 @@
   height: 3rem;
   padding: 0 2rem;
   gap: 3rem;
+  border-top: 0.075rem solid rgba($secondary-light-color, 0.4);
 
   &__box {
     display: flex;
@@ -25,7 +26,7 @@
     @include t-body-medium($primary-dark-color);
   }
 
-  &__icon {
-    height: 1.5rem;
+  &__logo {
+    height: 2.3rem;
   }
 }
