--- a/client/src/pages/PropertyPage/PropertyPage.scss
+++ b/client/src/pages/PropertyPage/PropertyPage.scss
@@ -25,36 +25,26 @@
   }
 
   &__left-side {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
     width: 40rem;
   }
 
   &__right-side {
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     width: 40rem;
   }
 
-  &__page-header {
-    @include t-page-header($primary-dark-color);
-    width: 100%;
+  &__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 1.5rem;
+    padding: 2rem 0;
   }
 
-  &__text {
-    @include t-body-medium($primary-dark-color);
-
-    &--description {
-      width: 100%;
-    }
-
-    &--address {
-      width: 100%;
-    }
-  }
-
-  &__label {
-    @include t-label($secondary-dark-color);
+  &__icon {
+    width: 1.5rem;
   }
 
   &__map {
@@ -62,5 +52,36 @@
     width: 40rem;
     height: 15rem;
     border-radius: 0.4rem;
+  }
+
+  &__contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__page-header {
+    @include t-page-header($primary-dark-color);
+    // width: 100%;
+  }
+
+  &__subheader {
+    @include t-subheader($primary-dark-color);
+  }
+
+  &__text {
+    @include t-body-medium($primary-dark-color);
+
+    &--address {
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__label {
+    @include t-label($secondary-dark-color);
+  }
+
+  &__email {
+    @include t-link($primary-dark-color);
   }
 }
