--- a/client/src/components/PropertyCard/PropertyCard.scss
+++ b/client/src/components/PropertyCard/PropertyCard.scss
@@ -3,14 +3,17 @@
 
 .property-card {
   width: 100%;
-  height: 30rem;
+  height: 32rem;
   border: 0.075rem solid $background-light-color;
   box-shadow: 0 0.125rem 0.313rem rgba($primary-dark-color, 0.2);
   border-radius: 0.4rem;
   overflow: hidden;
+  padding-bottom: 1rem;
 
   &__img {
     width: 100%;
+    height: 10rem;
+    object-fit: cover;
   }
 
   &__text-content {
@@ -18,6 +21,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+    height: 14rem;
   }
 
   &__subheader {
@@ -35,6 +39,10 @@
   &__icon {
     width: 1.5rem;
     margin-right: 0.25rem;
+
+    &--delete {
+      margin-left: 1rem;
+    }
   }
 
   &__info-box {
