--- a/client/src/pages/ProfilePage/ProfilePage.scss
+++ b/client/src/pages/ProfilePage/ProfilePage.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/variables" as *;
 
 .profile {
-  height: calc(100vh - 7rem);
+  // height: calc(100vh - 7rem);
 
   &__body {
     max-width: 80rem;
@@ -14,6 +14,14 @@
     @include t-page-header($primary-dark-color);
     margin-bottom: 1rem;
   }
+
+  &__properties {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+    width: 80%;
+    margin: 1rem auto;
+  }
 }
 
 .listing-form {
@@ -22,6 +30,11 @@
   justify-content: space-between;
   max-width: 60rem;
   margin: 0 auto;
+
+  &__subheader {
+    @include t-subheader($primary-dark-color);
+    margin: 4rem 0 1rem;
+  }
 
   &__left-side {
     width: 48%;
