--- a/client/src/pages/PropertyPage/PropertyPage.scss
+++ b/client/src/pages/PropertyPage/PropertyPage.scss
@@ -20,7 +20,7 @@
 
   &__content {
     display: flex;
-    height: calc(100vh - 20rem);
+    min-height: calc(100vh - 20rem);
     padding: 0.5rem 2rem;
   }
 
