--- a/client/src/pages/LandingPage/LandingPage.scss
+++ b/client/src/pages/LandingPage/LandingPage.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/variables" as *;
 
 .landing-page {
-  height: calc(100vh - 7rem);
+  min-height: calc(100vh - 7rem);
   width: 24rem;
   margin: 0 auto;
 
