--- a/client/src/pages/SignupPage/SignupPage.scss
+++ b/client/src/pages/SignupPage/SignupPage.scss
@@ -3,7 +3,7 @@
 
 .signup {
   background-color: $primary-light-color;
-  height: calc(100vh - 7rem);
+  min-height: calc(100vh - 7rem);
 
   &__page-header {
     @include t-page-header($primary-dark-color);
